--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -32,8 +32,8 @@ jobs:
           mvn clean
           mvn validate
           mvn package
-      - name: Archive production artifacts
-        uses: actions/upload-artifact@v4
+      - name: Download artifact
+        uses: actions/download-artifact@v3
         with:
           name: production
           path: ./target
