--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org</groupId>
-  <artifactId>Minecraft</artifactId>
+  <artifactId>MSKTime</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
@@ -68,4 +68,13 @@
           <scope>provided</scope>
       </dependency>
   </dependencies>
+
+  <distributionManagement>
+    <repository>
+      <id>github</id>
+      <name>GitHub OWNER Apache Maven Packages</name>
+      <url>https://maven.pkg.github.com/dzakharov90/MskTime</url>
+    </repository>
+  </distributionManagement>
+
 </project>
