--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -33,13 +33,15 @@ jobs:
           mvn clean
           mvn validate
           mvn package
-          mvn deploy
       - name: Upload artifacts
         uses: actions/upload-artifact@v2
         with:
           name: production
           path: ./target
           retention-days: 90
+      - name: Archieving artifact
+        run: mvn deploy
+
       
 #    - uses: actions/upload-artifact@v1
 #    - uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
