--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -43,7 +43,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.CI_Token }}
         run: |
-          mkdir ~/.m2
+          #mkdir ~/.m2
           echo "<settings><servers><server><id>github</id><username>dzakharov90</username><password>${GITHUB_TOKEN}</password></server></servers></settings>" > ~/.m2/settings.xml
           mvn deploy
 
