--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -40,7 +40,7 @@ jobs:
           path: ./target
           retention-days: 90
       - name: Publish JAR
-        run: ./mvnw -B release:prepare release:perform
+        run: ./mvn -B release:prepare release:perform
         env:
           GITHUB_TOKEN: ${{ secrets.CI_Token }}  
         
